<resources>
    <string name="app_name">[Vuong]Intern20Summer1</string>
    <string name="email_id_text_view_description_text">Enter your email ID</string>
    <string name="type_password_text_view_description_text">Type your password</string>
    <string name="retype_password_text_view_description_text">Retype your password</string>
    <string name="email_edit_text_hint">Email</string>
    <string name="password_edit_text_hint">Password</string>
    <string name="link_media_text_view_description_text">Link your social media profiles</string>
    <string name="sign_up_button_description_text">SIGN UP</string>
    <string name="not_registered_text_view_description_text">Not registered yet?</string>
    <string name="sign_up_text_view_description_text">Sign up!</string>
    <string name="text_view_next_description_text">NEXT</string>
    <string name="text_view_fragment_one_description_text">Step 1</string>
    <string name="text_view_fragment_two_description_text">Step 2</string>
    <string name="text_view_fragment_three_description_text">Step 3</string>
    <string name="tab_layout_description_one">HOME</string>
    <string name="tab_layout_description_two">INFO</string>
    <string name="tab_layout_description_three">ANOTHER</string>
    <string name="portugal_text_view_description">Bồ đào nha là đất nước của Ronaldo</string>
    <string name="viet_nam_text_view_description">Việt Nam là đát nước thân thiện</string>
    <string name="my_text_view_description">Mỹ là một cường quốc</string>
    <string name="text_view_next_text">NEXT</string>
    <string name="text_view_skip_text">SKIP</string>
    <string name="text_step">Step %s</string>
    <string name="button_exercise_w1">Exercise_W7</string>
    <string name="button_exercise_w2">Exercise_W2</string>
    <string name="button_exercise_w3">Exercise_W3</string>
    <string name="button_exercise_w4">Exercise_W4</string>
    <string name="button_exercise_w5">Exercise_W5</string>
    <string name="button_exercise_w6">Exercise_W6</string>
    <string name="facebook_id_button_description_text">Facebook</string>
    <string name="google_id_button_description_text">Google</string>
    <string name="edit_text_hint">Please input</string>
    <string name="password_text_view_description_text">Password</string>
    <string name="password_forgot_text_view_description_text">Forgot Password?</string>
    <string name="login_button_description_text">Login</string>
    <string name="account_do_not_text_view_description_text">Don\'t have an account?</string>
    <string name="register_now_text_view_description_text">Register Now</string>
    <string name="or_text_view_description_text">or</string>
    <string name="title_text_view_description_text">Register to Music Festival</string>
    <string name="full_name_text_view_description_text">Full Name</string>
    <string name="email_sign_up_text_view_description_text">Email</string>
    <string name="phone_number_text_view_description_text">Mobile Number</string>
    <string name="confirm_password_text_view_description_text">Confirm Password</string>
    <string name="register_button_description_text">Register</string>
    <string name="the_end_text_view_description_text">By registering you agree to Terms and
        Conditions and Privacy of the Festival</string>
    <string name="text_view_information_text">Your Profile</string>
    <string name="permission_denied">permission denied</string>
    <string name="title_dialog">Title Sign In</string>
    <string name="message_dialog">Fail username or password</string>
    <string name="text_exit_dialog">Exit</string>
    <string name="key_data_register">data</string>
    <string name="key_data_login">login</string>
    <string name="key_image">data</string>
    <string name="title_dialog_image">Choose Avatar</string>
    <string name="image_camera">Camera</string>
    <string name="image_gallery">Gallery</string>
    <string name="edit_text_user_name_hint">User Name</string>
    <string name="edit_text_university_hint">University</string>
    <string name="edit_text_home_town_hint">Home Town</string>
    <string name="button_register_description_text">Next</string>
    <string name="text_view_name_description_text">Vuong Phan T.</string>
    <string name="text_view_university_description_text">Da Nang University of Technology</string>
    <string name="icon_one">Vườn Rau</string>
    <string name="text_view_description_recycler_view">Trong vao luc 12h</string>
    <string name="app_name_toolbar">Garden</string>
    <string name="icon_two">Trồng Cây</string>
    <string name="icon_three">Sắp thu hoạch</string>
    <string name="share_preference_avatar_default">avatar</string>
    <string name="text_view_register_description_text">Register</string>
    <string name="icon_four">Rau bị sâu</string>
    <string name="icon_five">Rau thiếu nước</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="timer_one">trồng vào lúc: 03/08/20 12h10</string>
    <string name="timer_one_one">trồng vào lúc: 10/08/20 12h10</string>
    <string name="timer_tow">Thời gian thu hoạch: 11/08/20 12h10</string>
    <string name="timer_tow_two">Thời gian thu hoạch: 14/08/20 12h10</string>
    <string name="vegetable_one">Rau dền</string>
    <string name="vegetable_two">Rau cải</string>
    <string name="vegetable_three">Rau khoai lan</string>
    <string name="dialog_fragment">Trồng Cây</string>
    <string name="text_button_ok">OK</string>
    <string-array name="planets_array">
        <item>Option 1</item>
        <item>Option 2</item>
        <item>Option 3</item>
        <item>Option 4</item>
        <item>Option 5</item>
        <item>Option 6</item>
        <item>Option 7</item>
    </string-array>
    <string name="detail">initDetail</string>
    <string name="enter_input_your_email">Enter input your number phone</string>
    <string name="text_view_detail_name_tree">Cây Bị Sâu</string>
    <string name="text_view_detail_grow_tree">Trồng vào lúc: 05/08/2020 12h01</string>
    <string name="text_view_detail_sprinklers_tree">Tưới nước lần cuối: 05/08/2020 16h01</string>
    <string name="text_view_detail_description_tree">Mô tả cây  (dữ liệu từ database)</string>
    <string name="button_detail_sprinklers_tree">Tưới nước</string>
    <string name="button_detail_cut_tree">Chặt bỏ</string>
    <string name="text_cultivation">Trồng lúc: %s</string>
    <string name="text_harvest">Thu Hoạch: %s</string>
    <string name="text_grow_zone">Grow Zone: %s </string>
    <string name="text_watering">Tưới nước lần cuối: %s </string>
    <string name="toast_description">successful</string>
    <string name="text_view_recycler">Chưa có cây nào được trồng</string>
    <string name="text_view_recycler_worm">Chưa có câu nào bị sâu</string>
    <string name="text_view_recycler_harvest">Chưa có câu nào sắp thu hoạch</string>
    <string name="text_view_recycler_water">Chưa có câu nào thiếu nước</string>
    <string name="detail_fragment_toolBar_title">Thông Tin cây</string>
    <string name="clear_plant_complete">Nhổ Cây Thành Công</string>
    <string name="watering_plant_complete">Tưới Nước Thành Công</string>
    <string name="description_harvest">Cây sắp thu hoạch</string>
    <string name="description_worm">Cây bị sâu</string>
    <string name="description_water">Cây thiếu nước</string>
</resources>
